--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <h1>There's always [Park|1]</h1>
 
-    <p>I went over to [Skate Park|1] but then realised that it was too busy so I went to [Skate Park|2] instead. This was better than [Skate Park|1] anyway. And it was quite close to [Aquarium|1] so I went to see the fish there.</p>
+    <p>It was [weather] so I went over to [Skate Park|1] but then realised that it was too busy so I went to [Skate Park|2] instead. This was better than [Skate Park|1] anyway. And it was quite close to [Aquarium|1] so I went to see the fish there.</p>
 
     <p>I then sat in [Park|1] for a bit and read my book before going for lunch in [restaurant|1].</p>
-
+    
   </body>
 
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
