Day of the week variable

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <h1>There's always [Park|1]</h1>
 
-    <p>It was [weather] so I went over to [Skate Park|1] but then realised that it was too busy so I went to [Skate Park|2] instead. This was better than [Skate Park|1] anyway. And it was quite close to [Aquarium|1] so I went to see the fish there.</p>
+    <p>It was [day]. I got off at [Train station|1]. The weather was mostly [weather] so I went over to [Park|1] but then realised that it was too busy so I went to [Park|2] instead. This was better than [Park|1] anyway. I felt like seeing some animals, so I took a trip to [Zoo|1] after relaxing for a bit.</p>
 
-    <p>I then sat in [Park|1] for a bit and read my book before going for lunch in [restaurant|1].</p>
+    <p>I then returned to [Park|1] and read my book before going for lunch in [Japanese Restaurant|1] with a friend.</p>
     
   </body>
 
