Transfer from client side JS to server side PHP

--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
   <link rel="stylesheet" href="style.css" />
 
   <body>
-
-    <h1>There's always [Park|1]</h1>
-
-    <p>It was [day]. I got off at [Train station|1]. The weather was mostly [weather] so I went over to [Park|1] but then realised that it was too busy so I went to [Park|2] instead. This was better than [Park|1] anyway. I felt like seeing some animals, so I took a trip to [Zoo|1] after relaxing for a bit.</p>
-
-    <p>I then returned to [Park|1] and read my book before going for lunch in [Japanese Restaurant|1] with a friend.</p>
-    
+    <article>
+      [month], [day], [year], [zoo|1], [zoo|2]
+    </article>
   </body>
 
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
-<script src="secrets.js"></script>
 <script src="story.js"></script>
 
 </html>
