--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <article>
-      [month], [day], [year], [zoo|1], [zoo|2], [japanese restaurant|1]. [hours24]:[minutes], [hours12]:[minutes][hoursampm]. [country] [weather].
+      {if +help==help, -help>blue|yes|no}
     </article>
   </body>
 
