--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <article>
-      {if +help==help, -help>blue|yes|no}
+      {if +4<6, -help==testp|Hooray! Going to [zoo|1]|Not going anywhere.}
     </article>
   </body>
 
