--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <article>
-      {if +4<6, -help==testp|Hooray! Going to [zoo|1]|Not going anywhere.}
+      {if +4<6, -[weather]==cloudy|Hooray! Going to [zoo|1]|Too cloudy.}
     </article>
   </body>
 
