--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </li>
       <li>[weather] - One of the following: thunderstorm, rain, snow, clear, cloudy, calm, windy, extremeheat, extremecold.</li>
       <li>[sunsethour] - Hour when the sun sets in 24 hour time (21 for 9pm)</li>
-      <li>[sunrisehour] - Hour when the sun sets in 24 hour time (06 for 6am)</li>
+      <li>[sunrisehour] - Hour when the sun rises in 24 hour time (06 for 6am)</li>
     </ul>
 
     <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some before and after the project launches.</p>
