Date time format changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <li>[hours24] - Hour in day in 24 hour time. So 13 for 1pm</li>
       <li>[hours12] - Hour in day in 12 hour time. So 1 for 1pm</li>
       <li>[minutes] - Minutes past the hour</li>
-      <li>[hoursampm] - AM or PM depending on time of day.</li>
+      <li>[hoursampm] - am or pm depending on time of day.</li>
       <li>[monthofyear] - January, February... etc</li>
       <li>[longitude] - A reader's longitude</li>
       <li>[latitude] - A reader's latitude</li>
