--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <li>[latitude] - A reader's latitude</li>
       <li>[country] - A country name from (<a href="https://gist.github.com/vxnick/380904">this handy PHP array mapping country codes to names.</a>
       </li>
-      <li>[weather] - One of the following: thunderstorm, rain, snow, clear, cloudy, calm, windy, extremeheat, extremecold.</li>
+      <li>[weather] - One of the following: stormy, rainy, snowy, clear, cloudy, calm, windy, scorching, freezing.</li>
       <li>[sunsethour] - Hour when the sun sets in 24 hour time (21 for 9pm)</li>
       <li>[sunrisehour] - Hour when the sun rises in 24 hour time (06 for 6am)</li>
     </ul>
