Example story change

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
         <br />
         
-      <textarea id="input" placeholder="It was [dayofweek]. I went to [aquarium|1] to see Charlotte. She frightened me."></textarea>
+      <textarea id="input" placeholder="I love [dayofweek]s. It was around [hours12][hoursampm] on a [dayofweek] when I first saw its outlines. I was sitting in [park|1] and looking out at the sky. It was a [weather] day much like this one. Wings. Clearly a pair of wings. Floating somewhere towards [supermarket|1] as if going about their everyday business. This month is even more special. It happened in [monthofyear]. So I walk over to [park|1] and look out. But there's never anything anymore..."></textarea>
 
     <button id="localise">Localise</button>
 
