Hours to sunset and sunrise

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       <li>[weather] - One of the following: stormy, rainy, snowy, clear, cloudy, calm, windy, scorching, freezing.</li>
       <li>[sunsethour] - Hour when the sun sets in 24 hour time (21 for 9pm)</li>
       <li>[sunrisehour] - Hour when the sun rises in 24 hour time (06 for 6am)</li>
+        <li>[hourstosunset] - Hours until the sun sets (22, 02...).</li>
+        <li>[hourstosunrise] - Hours until the sun rises (22, 02...).</li>
     </ul>
 
     <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some before and after the project launches.</p>
