Try out your story

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p>THANK YOU for getting this far and for considering contributing a story for the launch of the project.</p>
         <p>Don't hesitate to get in touch if you run into any issues or have any questions.</p>
         
-        <h4>Your story</h4>
+        <h3>Try out your story</h3>
         
         <div id="output">
           ---
