--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <li>You put in other types of variables such as the date and time of the user. Also in square brackets, without an ID number this time. <em>[dayofweek]</em> for example.</li>
       <li>You decide that certain bits of the story should only take place if say, it is a Tuesday and it's snowing, in June and the reader is in Newcastle. You enclose these parts in a final set of variables, <em>conditionals</em>. The syntax for these is slightly more complicated but looks a bit like <em>{if +[weather]==clear, -[hour24]<18|It was a perfect day for going outside|It wasn't a good day to go outside}</em>
       </li>
-      <li>You put in as few or as many variables as you want. You could just write a story with a single place name or day of the week in it.</li>
+      <li>You put in as few or as many variables as you want. You could just write a story with a single place name or day of the week in it or a complex conditional megabeast of fiction.</li>
       <li>The system detects a reader's time and location (if they agree to it) and automatically replaces these variables with dynamic, localised information.</li>
       <li>The resulting story is unique to every reader but keeps its essense between readers as it's just certain parts that change.</li>
     </ul>
     <h3>Types of variable (syntax)</h3>
     <h4>Places</h4>
     <p>Places are pulled in from Foursquare (a place-based social network and place listing).</p>
-    <p>To put a place in your story, a zoo for example, first look up the name of the category of place on <a href="https://developer.foursquare.com/categorytree">this list from Foursquare to make sure it's available</a>. The list is updated live from Foursquare so if squirrel cafes suddenly become a huge thing they might be a useable variable in the future.</p>
+        <p>To put a place in your story, a zoo for example, first look up the name of the category of place on <a href="https://developer.foursquare.com/categorytree">this list of place categories from Foursquare</a> to make sure it's available. The list this library uses is updated live from this Foursquare list so if squirrel cafes suddenly become a huge thing they might be a useable variable in the future. Parent categories contain everything below them so you can use them for less specific variables.</p>
     <p>Next, enclose the name of the category in square brackets followed by a | (pipe) character and a unique identifier for that place (in case you want to re-use the same place in multiple parts of the story).</p>
     <p>Example: [zoo|1]
       <br />
@@ -42,8 +42,8 @@
         <p>You might want to use other information about a place, like the street it's on or how far away it is from the person.</p>
         <p>If you've got how places work this bit should be easy as it's just another pipe character after the ID.</p>
         <ul>
-        <li>[park|1|street] - Gets the street the park (example) is on. Numbers are stripped out. This could format strangely for some places but give it a go. Might be nice for providing a general street for things to happen in.</li>
-          <li>[beach|1|distance] - Distance in meters. Useful for conditionals like if you want to find out how far someone is from the sea.</li>
+        <li>[park|1|street] - Gets the street the park (for example) is on. Parts of street names containing numbers are stripped out (11,33b...). This field could format strangely for some places and some won't have it set (defaults to "the street") but give it a go. Might be nice for providing a general street for things to happen in.</li>
+          <li>[beach|1|distance] - Distance in meters from a reader's location to a place. Useful for conditionals like if you want to find out how far someone is from the sea.</li>
           <li>[aquarium|1|city] - The city or town a location is in. Probably quite useful generally regardless of the place.</li>
         </ul>
         
