--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <p>However long you want (although if it takes a reader long to read it they may have moved time and location by the time they finish, thereby changing the story!).</p>
         <h3>Try out a story (The demo)</h3>
         <p>Use the following text area to try out text and variables. Once you've put them all in, hit localise and (if you have given your browser permission to use your location) the results should appear above the textarea.</p>
-        <p><em>Sorry about any scary error messages you receive, they're going to be made less scary and less common in the coming week.</em></p>
+        <p>If you receive any error messages, please tweak and keep trying. If you keep getting error messages and can't see why, get in touch. You may have found a bug.</p>
         <p>THANK YOU for getting this far and for considering contributing a story for the launch of the project.</p>
         <p>Don't hesitate to get in touch if you run into any issues or have any questions.</p>
         
