--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <small>Every instance of [zoo|1] would be replaced by the nearest zoo to a reader automatically. [zoo|2] would be another zoo.</small>
     </p>
       <h4>Other information about places</h4>
-        <p>You might want to use other information about a place, like the street it's on or how far away it is from the person.</p>
+        <p>You might want to use other information about a place, like the street it's on or how far away it is from the reader.</p>
         <p>If you've got how places work this bit should be easy as it's just another pipe character after the ID.</p>
         <ul>
         <li>[park|1|street] - Gets the street the park (for example) is on. Parts of street names containing numbers are stripped out (11,33b...). This field could format strangely for some places and some won't have it set (defaults to "the street") but give it a go. Might be nice for providing a general street for things to happen in.</li>
@@ -69,7 +69,7 @@
 
     <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some before and after the project launches.</p>
 
-    <h4>Other variables</h4>
+    <h4>Conditionals</h4>
 
     <p>Conditionals are the most complex (and probably most buggy at the moment) part of the system but hopefully not so complex that you don't try them out.</p>
     <p>They're enclosed in curly brackets with the word <em>if</em> followed by a space after the opening bracket.</p>
