--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </ul>
         
     <h4>Other variables</h4>
-    <p>It's not just places you can swap into text, here are some other variables you can use. Unlike places, you don't need to put in the | and an ID number. These always print out the same result for a reader.</p>
+    <p>It's not just places you can swap into text, here are some other variables you can use.</p>
     <ul>
       <li>[dayofweek] - Monday, Tuesday... etc</li>
       <li>[hours24] - Hour in day in 24 hour time. So 13 for 1pm</li>
@@ -66,6 +66,17 @@
         <li>[hourstosunset] - Hours until the sun sets (22, 4...).</li>
         <li>[hourstosunrise] - Hours until the sun rises (22, 4...).</li>
     </ul>
+        
+<!--
+        <p>Some of the time based variables can be increased or decresed by a number</p>
+        <p>To do this simply add a | followed by a + or a - sign and the number to add to them</p>
+        <ul>
+        <li>[dayofweek+1] - shows the day of the week tomorrow. -1 would show yesterday.</li>
+          <li>[hours24+1] or [hours12+1] - increases the amount of time returned by 1 hour, -4 would be four hours ago.</li>
+          <li>[hours24+1] or [hours12+1] - increases the amount of time returned by 1 hour, -4 would be four hours ago.</li>
+           <li>[minutes+30] - increases the amount of time returned by 30 minutes, -20 would be 20 minutes ago.</li>
+        </ul>
+-->
 
     <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some before and after the project launches.</p>
 
