Padding for mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css" />
 
   <body>
-
+<section>
     <h1>Local Stories</h1>
     <h2>A markup library for making dynamic, localised stories</h2>
     <h3>Introduction</h3>
@@ -112,7 +112,7 @@
       <textarea id="input" placeholder="I love [dayofweek]s. It was around [hours12][hoursampm] on a [dayofweek] when I first saw its outlines. I was sitting in [park|1] and looking out at the sky. It was a [weather] day much like this one. Wings. Clearly a pair of wings. Floating somewhere towards [supermarket|1|street] as if going about their everyday business. This month is even more special. It happened in [monthofyear]. So I walk over to [park|1] and look out. But there's never anything anymore..."></textarea>
 
     <button id="localise">Localise</button>
-
+</section>
   </body>
 
   <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
