Explain date offsets

--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
         <li>[hourstosunrise] - Hours until the sun rises (22, 4...).</li>
     </ul>
         
-<!--
-        <p>Some of the time based variables can be increased or decresed by a number</p>
-        <p>To do this simply add a | followed by a + or a - sign and the number to add to them</p>
+        <p>Most of the time based variables can be increased or decresed by a number to get times and dates in the past or in the future.</p>
+        <p>To do this simply add a | followed by a + or a - sign and the number to add to them.</p>
         <ul>
-        <li>[dayofweek+1] - shows the day of the week tomorrow. -1 would show yesterday.</li>
-          <li>[hours24+1] or [hours12+1] - increases the amount of time returned by 1 hour, -4 would be four hours ago.</li>
-          <li>[hours24+1] or [hours12+1] - increases the amount of time returned by 1 hour, -4 would be four hours ago.</li>
-           <li>[minutes+30] - increases the amount of time returned by 30 minutes, -20 would be 20 minutes ago.</li>
+        <li>[dayofweek|+1] - shows the day of the week tomorrow. -1 would show what day it was yesterday.</li>
+          <li>[hours24|+1] or [hours12|+1] - increases the amount of time returned by 1 hour, -4 would be four hours ago.</li>
+          <li>[year|+1] - increases the returned year. - would decrease it.</li>
+           <li>[minutes|+30] - increases the amount of time returned by 30 minutes, -20 would be 20 minutes ago.</li>
+          <li>[ampm|+1] - An offset of hours to pass to am or pm.  If it's noon and you pass -1, it'll return am for example.</li>
         </ul>
--->
 
     <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some before and after the project launches.</p>
 
