--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>Here's how it works:</p>
 
       <p>A writer writes a story and at certain points, replaces static words like days of the week and place names with special placeholders or <em>variables</em>.</p>
-      <p>What kinds of variables can be used and how they work is covered below. Here is an example of how a piece of text might look before it is converted for a reader:</p>
+      <p>What kinds of variables can be used and how they work is covered in detail below but here is an example of how a piece of text might look before it is converted for a reader:</p>
       
       <div class="codeblock">
       
