Style and documentation tweaks

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <small>Hour (in 24 hour time) of the next sunset. You can also use <b>hourstosunset</b> to get how much time until the next sunset. Both useful in conditionals.</small>
       <div class="codeblock">
 
-        It could only happen exactly at sunset. <span class="code">[sunrisehour]</span> hundred hours. That was <span class="code">[hourstosunrise]</span> hours away.
+        It could only happen exactly at sunrise. <span class="code">[sunrisehour]</span> hundred hours. That was <span class="code">[hourstosunrise]</span> hours away.
       </div>
       <small>Same as sunset but for sunrise. See above.</small>
 
@@ -116,7 +116,7 @@
 
       <h3>Conditionals</h3>
 
-      <p>Conditionals are the most complex (and probably most buggy at the moment) part of the system but hopefully not so complex that you don't try them out.</p>
+      <p>Conditionals are the most complex part of the system but hopefully not so complex that you don't try them out as they're probably the best part of it.</p>
       <p>They're enclosed in curly brackets with the word <em>if</em> followed by a space after the opening bracket.</p>
       <p>After this space and before the second bracket, you can put in statements that should either be true or false. First decide if a statement should be true or false and put in a + or a - sign. Then put in the name of the value you wish to compare to something (this can be static such as the number 5 or dynamic such as [sunsethour]). Then put in an operator from either == (equals (two == signs)), > (greater than) or
         < (less than).</p>
