--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="codeblock">
         <span class="code">[longitude]</span>,<span class="code">[latitude]</span> said the screen. This was the right place. It's what it said on the paper. But my instinct told me <span class="code">[country]</span> wasn't even the right part of the world.
       </div>
-      <small>Longitude and latitude for those who need it. Niche but why not? Also a country name from <a href="https://gist.github.com/vxnick/380904">this handy PHP array mapping country codes to names.</a></small>
+      <small>Longitude and latitude for those who need it. Also a country name from <a href="https://gist.github.com/vxnick/380904">this handy PHP array mapping country codes to names.</a></small>
 
       <div class="codeblock">
 
@@ -112,7 +112,7 @@
       </div>
       <small>Same as sunset but for sunrise. See above.</small>
 
-      <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some before and after the project launches.</p>
+      <p>More variables will come in the future but that should hopefully give you a nice start. Please feel free to suggest some if you feel anything is missing.</p>
 
       <h3>Conditionals</h3>
 
