Replace leading the if present in venue

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p>If you've got how places work this bit should be easy as it's just another pipe character after the ID.</p>
       <div class="codeblock">
         He lived on <span class="code">[park|1|street]</span>. I never liked that part of town after what happened to Emily.</div>
-      <small>Putting the word "street" after the pipe will get translated to the street the venue is on. Parts of street names containing numbers are stripped out (11,33b...). If there's no street set it defaults to "the street". Might be useful for providing a general street for things to happen in.</small>
+      <small>Putting the word "street" after the pipe will get translated to the street the venue is on. Parts of street names containing numbers are stripped out (11,33b...). If there's no street set it defaults to "The Street". Might be useful for providing a general street for things to happen in.</small>
 
       <div class="codeblock">
         She arranged to meet me at <span class="code">[zoo|1]</span>. For some reason she never wanted to see me more than <span class="code">[zoo|1|distance]</span> meters from an animal park.
@@ -71,7 +71,7 @@
       <div class="codeblock">
         I love coming back to the smell of <span class="code">[park|1|city]</span>. It reminds me of that night in <span class="code">[chinese restaurant|1]</span> all those years ago.
       </div>
-      <small>The city or town the venue is in. Defaults to "the city" if the venue doesn't have one set.</small>
+      <small>The city or town the venue is in. Defaults to "The City" if the venue doesn't have one set.</small>
 
       <h4>Other variables</h4>
       <p>It's not just places you can swap into text, here are some other variables you can use.</p>
